src/App.css
.container {
	width: 100%;
	min-height: 100vh;
	display: flex;
	flex-wrap: nowrap;
}
.org-tree {
	width: 60%;
	margin: 10px;
}
body {
	font-family: sans-serif;
}
.employee-list-container {
	width: 30%;
	height: 100%;
}
.employee-list,
ul {
	height: 100%;
	padding-inline-start: 10px;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}
.employee-list-item {
	margin: 8px;
	box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
	padding: 6px 12px;
	display: flex;
	justify-content: flex-start;
}
.search-filter-employee {
	display: flex;
	padding: 20px;
}
.input-search-btn {
	position: relative;
	width: 80%;
	margin-right: 10px;
}
.search-input {
	width: 100%;
	height: 35px;
	outline: none;
	padding-left: 20px;
	font: 400 16px sans-serif;
}
.search-btn {
	position: absolute;
	right: 0px;
	top: 0px;
	cursor: pointer;
	background: #11998e;
	color: #fff;
	outline: none;
	border: none;
	height: 35px;
}
.filter-btn {
	width: 20%;
	outline: none;
	height: 35px;
	font: 400 16px sans-serif;
}
.employee-image {
	height: 50px;
	width: 50px;
	margin-top: 20px;
	margin-right: 20px;
}
.employee-name {
	font: 600 20px sans-serif;
	margin: 0px;
	margin-top: 15px;
}
.employee-designation {
	margin-top: 5px;
	font: 400 16px sans-serif;
	display: flex;
	flex-direction: column;
}
.employee-team {
	font: 600 13px sans-serif;
	margin: 5px;
	width: 150px;
	text-align: center;
	padding: 5px 10px;
	border-radius: 5px;
	color: #000;
}
.org-tree ul {
	padding-top: 20px;
	position: relative;
	transition: all 0.5s;
}

.org-tree li {
	float: left;
	padding-inline-start: 20px;
	text-align: center;
	list-style-type: none;
	position: relative;
	padding: 20px 5px 0 5px;
	transition: all 0.5s;
}

.node-container {
	display: flex;
	flex-direction: column;
}
.node {
	display: flex;

	margin: 5px auto;
}
.node-item {
	margin: 5px;
	box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
	padding: 5px 10px;
}
.node-item > h3 {
	font-weight: 600;
	margin: 5px auto;
	line-height: 20px;
}
.team-btn {
	color: #000;
	border: none;
	padding: 5px 10px;
	margin: 5px;
	font: 40 15px sans-serif;
}

#children {
	display: flex;
}
.card {
	position: relative;
	box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, 0.2);
	width: 400px;
	margin: 10px auto;
}

.card .image {
	border-radius: 50%;
	width: 80px;
	min-height: 80px;
	display: block;
	margin: 10px auto;
	z-index: 100;
}
.card .image img,
.node > .node-item > img {
	width: 60px;
	height: 60px;
}
.card .card-body {
	background: #fff;
	min-height: 56px;
	text-align: center;
	width: 300px;
	border-radius: 16px;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	position: relative;
	z-index: -1;
	left: 50%;
	transform: translateX(-50%);
}

.card .card-body h4 {
	font-weight: 600;
	margin: 5px auto;
	line-height: 20px;
}
.card .card-body p {
	line-height: 20px;
	margin: 5px auto;
	font-size: small;
}
.card .card-footer {
	padding: 3px;
	background: #96f6b7;
	text-align: center;
	bottom: 0;
	position: relative;
	width: 295px;
	border-radius: 16px;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
	z-index: -1;
	left: 50%;
	transform: translateX(-50%);
}
.card .card-footer img {
	width: 25px;
	margin: 5px;
}

@media all and (max-width: 1000px) {
	.container {
		flex-direction: column;
		flex-wrap: wrap;
	}
	.org-tree {
		width: 100%;
	}
	.employee-list-container {
		width: 100%;
		height: 100%;
	}
	.card {
		width: 90%;
	}
	.node {
		overflow-x: scroll;
		width: 100%;
	}
}

